--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
+    "twilio": "^2.11.1",
     "validator": "^5.2.0"
   }
 }
